# mcrt

./: .gitignore  Cargo.toml  Makefile  ROADMAP.md  ROADMAP_IMPLICIT_SURFACES.md  ROADMAP_IRRADIANCE_CACHE.md  ROADMAP_PROCEDURAL_WORLD.md  ROADMAP_REGRESSION_TESTING.md  ROADMAP_RESTIR_BDPT.md  ROADMAP_RESTIR_PT.md  Trunk.toml  index.html  mcrt-4759e88c3a5169e3.js  mcrt-4759e88c3a5169e3_bg.wasm
.github/agents/: Reviewer.agent.md
.github/workflows/: ci.yml  pages.yml
assets/: cornell-box.yaml  scene.yaml  skybox.yaml  world.yaml
docs/: CODE_STRUCTURE.md  REGRESSION_TESTING.md
docs/archive/: 02_ROADMAP_REGRESSION_TESTING.md
scripts/: regress_baseline.sh
src/: app.rs  bvh.rs  camera.rs  gpu.rs  gpu_layout.rs  headless.rs  lib.rs  main.rs  material.rs  mesh.rs  platform.rs  regression.rs  scene.rs  texture.rs  web.rs
src/shaders/: denoise.wgsl  display.wgsl  path_trace.wgsl  probe_common.wgsl  probe_update.wgsl
src/world/: block.rs  chunk.rs  generator.rs  mesher.rs  mod.rs
tests/: regression_tests.rs  shader_integration.rs  web_index_html.rs
tests/assets/: gen_test_skymap.py
tests/assets/scenes/: README.md  cornell_box_mini.test.toml  cornell_box_mini.yaml  diffuse_sphere.test.toml  diffuse_sphere.yaml  emissive_box.test.toml  emissive_box.yaml  glass_sphere.test.toml  glass_sphere.yaml  mirror_sphere.test.toml  mirror_sphere.yaml  skymap_sphere.test.toml  skymap_sphere.yaml
web/: index.html
