[package]
name = "mcrt"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
wgpu = "28"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
glam = "0.32"
env_logger = "0.11"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "hdr"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
