[package]
name = "mcrt"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
wgpu = "27"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
glam = "0.32"
env_logger = "0.11"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "hdr"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
notify = "7"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"

[dev-dependencies]
# Offline WGSL parser/validator — same naga version bundled inside wgpu 27.
naga = { version = "27", features = ["wgsl-in"] }
pollster = "0.4"
